--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,11 @@ asgiref==3.9.2
 Django==5.2.6
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+flake8==7.3.0
+mccabe==0.7.0
+psycopg2-binary==2.9.11
+pycodestyle==2.14.0
+pyflakes==3.4.0
 PyJWT==2.10.1
 python-dotenv==1.1.1
 sqlparse==0.5.3
