--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,26 @@
 services:
-
     sge_web:
         build: .
         restart: always
         ports:
-            - 8000:8000
+        - "8000:8000"
+        env_file:
+        - .env
+        volumes:
+        - .:/sge
         depends_on:
-            - sge_db
+        - sge_db
+        extra_hosts:
+        - "host.docker.internal:host-gateway" 
 
     sge_db:
         image: postgres:15
         ports:
-            - 5432:5432
+        - "5432:5432"
         volumes:
-            - postgres_data:/var/lib/postgresql/data/
+        - postgres_data:/var/lib/postgresql/data/
         env_file:
-            - .env
+        - .env
 
 volumes:
     postgres_data:
